# devops_handbook

./: README.md
ansible/: DESIGN.md  README.md
ansible/day1/: README.md
ansible/day2/: README.md
ansible/day3/: README.md
ansible/day4/: README.md
ansible/day5/: README.md
ansible/day6/: README.md
ansible/day7/: README.md
argocd/: DESIGN.md  README.md
argocd/day1/: README.md
argocd/day2/: README.md
argocd/day3/: README.md
argocd/day4/: README.md
argocd/day5/: README.md
argocd/day6/: README.md
argocd/day7/: README.md
aws/: DESIGN.md  README.md
aws/day1/: README.md
aws/day10/: README.md
aws/day11/: README.md
aws/day12/: README.md
aws/day13/: README.md
aws/day14/: README.md
aws/day15/: README.md
aws/day16/: README.md
aws/day17/: README.md
aws/day18/: README.md
aws/day19/: README.md
aws/day2/: README.md
aws/day20/: README.md
aws/day21/: README.md
azure/: DESIGN.md  README.md
cicd/: DESIGN.md  README.md
docker/: README.md
gcp/: DESIGN.md  README.md
git/: README.md
helm/: DESIGN.md  README.md
kubernetes/: DESIGN.md  README.md
linux/: README.md
monitoring/: DESIGN.md  README.md  docker-compose.yml
network/: README.md
nginx/: DESIGN.md  README.md  docker-compose.yml
python/: DESIGN.md  README.md
python/day28/labs/: pyproject.toml
python/day28/labs/src/handbook_tool/: __init__.py  __main__.py  cli.py
python/day28/labs/tests/: test_cli.py
python/day30/labs/incident_toolkit/: hosts_registry.json  pyproject.toml  targets.example.yaml
python/day30/labs/incident_toolkit/src/incident_toolkit/: __init__.py  __main__.py  ansible_ops.py  api.py  cli.py  config.py  health.py  inventory.py  logging_setup.py  metrics.py  models.py
python/day30/labs/incident_toolkit/tests/: conftest.py  test_cli.py  test_health.py  test_models.py
python/day7/labs/sample_project/: pyproject.toml
python/day7/labs/sample_project/src/handbook_deploy/: __init__.py  __main__.py  cli.py  util.py
redis/: README.md
rediscli/: DESIGN.md  README.md  docker-compose.yml
sql/: DESIGN.md  README.md  docker-compose.yml
terraform/: DESIGN.md  README.md
(+512 files in other folders)
