[tool.poetry]
name = "handbook-tool"
version = "0.1.0"
description = "Internal ops CLI for handbook labs"
authors = ["Platform Team <platform@example.com>"]
readme = "README.md"
packages = [{ include = "handbook_tool", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
mypy = "^1.11"

[tool.poetry.scripts]
handbook-tool = "handbook_tool.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
strict = true
