[tool.poetry]
name = "incident-toolkit"
version = "1.0.0"
description = "Capstone incident response toolkit for DevOps handbook"
authors = ["Platform Team <platform@example.com>"]
packages = [{ include = "incident_toolkit", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.0"
rich = "^13.7.0"
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
structlog = "^24.4.0"
prometheus-client = "^0.20.0"
aiohttp = "^3.10.0"
pyyaml = "^6.0.2"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
httpx = "^0.27.0"
mypy = "^1.11.0"

[tool.poetry.scripts]
incident = "incident_toolkit.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: live ansible or network"]

[tool.mypy]
python_version = "3.11"
strict = true
