[project]
name = "handbook-deploy"
version = "0.1.0"
description = "DevOps handbook sample deploy CLI"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
handbook-deploy = "handbook_deploy.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
